gcc/testsuite/g++.dg/modules/pmp-1_b.C
// { dg-additional-options -fmodules-ts }

module bob;
int k;

module :private; // { dg-error "private module fragment" }
int i;
